<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#D48BE1"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:src="@drawable/quiz"/>

<TextView
    android:id="@+id/questionTextView"
    android:padding="8dp"
    android:text="@string/question_body"
    android:textColor="@color/white"
    android:textSize="25sp"
    android:textStyle="bold|italic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="34dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/trueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:text="@string/true_text"
        android:textStyle="bold|italic"
        />

    <Button
        android:id="@+id/falseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:padding="20dp"
        android:text="@string/false_text"
        android:textStyle="bold|italic"
        />

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="34dp"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/prv_btn"
        android:contentDescription="@string/previous_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/left"/>

    <ImageButton
        android:id="@+id/next_btn"
        android:contentDescription="@string/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/right"/>
</LinearLayout>

</LinearLayout>